<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/title"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@color/title"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choosethegraments"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/chooseGarments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@color/title2">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>
    <FrameLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginRight="10dp"
        >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@color/title"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2.Choose Neck Style"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@color/title"
                        android:gravity="center_vertical|right">
                        <TextView
                            android:id="@+id/nextBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/next"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:paddingLeft="50dp"/>
                    </LinearLayout>
                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/chooseNeck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                        </androidx.recyclerview.widget.RecyclerView>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@color/white"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/choosetheseleeves"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/chooseSleeves"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                        </androidx.recyclerview.widget.RecyclerView>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@color/white"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/choosecuff"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/chooseCuff"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                        </androidx.recyclerview.widget.RecyclerView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@color/white"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/choosebuttons"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/chooseButtom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                        </androidx.recyclerview.widget.RecyclerView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@color/white"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/chooselong"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/chooseLong"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                        </androidx.recyclerview.widget.RecyclerView>

                    </LinearLayout>
                </ScrollView>


            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="right"
            android:orientation="vertical"
            android:background="#20000000"
            android:layout_gravity="bottom"
            >
            <LinearLayout
                android:id="@+id/nextBtnBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:background="@drawable/btn_next">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>